--- a/.github/workflows/ai-review.yml
+++ b/.github/workflows/ai-review.yml
@@ -1,1 +1,21 @@
+name: OpenAI Code Review
 
+on:
+  workflow_call:
+
+jobs:
+  code_review:
+    if: github.event.pull_request.user.name != 'renovate'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Review
+        uses: sshnaidm/gpt-code-review-action@v2.0
+        with:
+          openai-key: ${{ secrets.OPENAI_API_KEY }}
+          # model: 'gpt-4'
+          max-length: 12000
