feat: update code review workflow

--- a/.github/workflows/ai-review.yml
+++ b/.github/workflows/ai-review.yml
@@ -18,8 +18,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Review
-        uses: sshnaidm/gpt-code-review-action@v2.0
+        uses: cawcaw253/ai-review-action@v1.2.0
         with:
-          openai-key: ${{ secrets.OPENAI_API_KEY }}
-          # model: 'gpt-4'
-          max-length: 12000
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
