--- a/.github/workflows/node-pr-check.yml
+++ b/.github/workflows/node-pr-check.yml
@@ -22,6 +22,8 @@ jobs:
 
       - name: Install
         run: npm ci
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build
         run: npm run build
