--- a/.github/workflows/node-pr-check.yml
+++ b/.github/workflows/node-pr-check.yml
@@ -20,6 +20,14 @@ jobs:
         with:
           node-version: ${{ inputs.node_version }}
 
+      - name: Cache Node Modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ inputs.node_version }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-${{ inputs.node_version }}-
+
       - name: Generate NPMRC
         run: |
           echo "//npm.pkg.github.com/:_authToken=${{secrets.GITHUB_TOKEN}}" > .npmrc
